tests/errors/stray_colon.moss
fn foo(): ;
#         ^ expected `{` or name
